--- a/style.css
+++ b/style.css
@@ -15,10 +15,8 @@ body {
   font-family: 'Press Start 2P', sans-serif;
   color: #eee;
   background-color: #222;
-  /* background-color: #60b347; */
 }
 
-/* LAYOUT */
 header {
   position: relative;
   height: 35vh;
@@ -56,6 +54,17 @@ h1 {
   transform: translate(-50%, -50%);
 }
 
+h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+li {
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
 .number {
   background: #eee;
   color: #333;
@@ -79,6 +88,12 @@ h1 {
 .again {
   position: absolute;
   top: 2rem;
+  left: 2rem;
+}
+
+.instructions {
+  position: absolute;
+  top: 9rem;
   left: 2rem;
 }
 
@@ -116,4 +131,43 @@ h1 {
 
 .label-score {
   margin-bottom: 2rem;
+}
+
+.close-modal {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: #070000;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  color: #3a3a3a;
+  background-color: white;
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+}
+
+.hidden {
+  display: none;
 }
